Bug 41011 - ICE in ipcp_lattice_from_jfunc, at ipa-cp.c:328
Summary: ICE in ipcp_lattice_from_jfunc, at ipa-cp.c:328
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: tree-optimization (show other bugs)
Version: 4.5.0
: P3 normal
Target Milestone: 4.5.0
Assignee: Richard Biener
URL:
Keywords: ice-on-valid-code
Depends on:
Blocks:
 
Reported: 2009-08-08 21:46 UTC by Richard Biener
Modified: 2009-08-18 16:46 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2009-08-12 15:01:58


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Richard Biener 2009-08-08 21:46:44 UTC
at -O3 -fwhole-file

      CALL UVSET(NX,NY,NZ,HVAR,ZET,NP,DZ,DKM,UM,VM,UG,VG,TM,DCDX,
     *ITY,ISH,NSMT,F)
         CALL DCTDX(NX,NY,NX1,NFILT,C(MLAG),DCDX(MLAG),HELP,HELPA,
     *   HELP,HELPA,FY,FYC,SAVEY)
      END
      SUBROUTINE PADEC(DKS,DKDS,HVAR,WM,WG,FN,NS,AN,BN,CN,IT)
      COMPLEX*16 WM(*),WG(*),FN(*),AN(*),BN(*),CN(*)
         BN(J)=F4+AS+GAMMA*F2
         CN(J)=F4-AS+GAMMA*F2
         FN(J)=(AS+F4-GAMMA*F2)*H2+(F4-AS-GAMMA*F2)*H0+
     *   H1*(F3-GAMMA/3.D0)+GAMMA*WG(J)-CONST
      END
      SUBROUTINE UVSET(NX,NY,NZ,HVAR,ZET,NP,DZ,DKM,UM,VM,UG,VG,TM,
     *WORK,ITY,IH,NSMT,F)
      DIMENSION HVAR(*),ZET(*),TM(*),DKM(*),UM(*),VM(*),UG(*),VG(*),
     *WORK(*)
      IF(IH.EQ.0) THEN
         CALL PADEC(DKM,VM,HVAR,WORK(LWM),WORK(LWG),
     *   WORK(LF),NZ,WORK(LA),WORK(LB),WORK(LC),ITY)
      ENDIF
      END
Comment 1 Richard Biener 2009-08-12 15:01:58 UTC
I have a patch.
Comment 2 Richard Biener 2009-08-12 17:55:43 UTC
Fixed.
Comment 3 Richard Biener 2009-08-12 17:56:00 UTC
Subject: Bug 41011

Author: rguenth
Date: Wed Aug 12 17:55:40 2009
New Revision: 150705

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=150705
Log:
2009-08-12  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/41011
	* ipa-cp.c (ipcp_lattice_from_jfunc): Deal with failing fold
	and reference constructing.

	* gfortran.dg/pr41011.f: New testcase.

Added:
    trunk/gcc/testsuite/gfortran.dg/pr41011.f
Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/ipa-cp.c
    trunk/gcc/testsuite/ChangeLog

Comment 4 hjl@gcc.gnu.org 2009-08-16 20:25:01 UTC
Subject: Bug 41011

Author: hjl
Date: Sun Aug 16 20:23:57 2009
New Revision: 150812

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=150812
Log:
2009-08-16  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2009-08-14  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/41070
	* gfortran.dg/structure_constructor_10.f90: New.

	2009-08-14  Paolo Bonzini  <bonzini@gnu.org>

	PR target/40934
	* gcc.target/i386/pr40934.c: New.

	2009-08-13  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/40995
	* gfortran.dg/intrinsic_4.f90: New.

	2009-08-13  Richard Guenther  <rguenther@suse.de>

	PR middle-end/41047
	* gcc.dg/tree-ssa/ssa-ccp-27.c: New testcase.

	2009-08-12  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/41011
	* gfortran.dg/pr41011.f: New testcase.

	2009-08-10  Richard Guenther  <rguenther@suse.de>

	PR middle-end/41006
	* gcc.c-torture/compile/pr41006-1.c: New testcase.
	* gcc.c-torture/compile/pr41006-2.c: Likewise.

	2009-08-10  Dodji Seketeli  <dodji@redhat.com>

	PR c++/40866
	* g++.dg/expr/stmt-expr-1.C: New test.

	2009-08-09  Ira Rosen  <irar@il.ibm.com>

	PR tree-optimization/41008
	* gcc.dg/vect/O1-pr41008.c: New test.

	2009-08-08  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/40991
	* g++.dg/torture/pr40991.C: New testcase.

	2009-08-06  Uros Bizjak  <ubizjak@gmail.com>
		    H.J. Lu  <hongjiu.lu@intel.com>

	PR target/40957
	* gcc.target/i386/pr40957.c: New test.

	2009-08-06  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/40964
	* gcc.c-torture/compile/pr40964.c: New testcase.

Added:
    branches/gcc-4_4-branch/gcc/testsuite/g++.dg/expr/stmt-expr-1.C
      - copied unchanged from r150811, trunk/gcc/testsuite/g++.dg/expr/stmt-expr-1.C
    branches/gcc-4_4-branch/gcc/testsuite/g++.dg/torture/pr40991.C
      - copied unchanged from r150811, trunk/gcc/testsuite/g++.dg/torture/pr40991.C
    branches/gcc-4_4-branch/gcc/testsuite/gcc.c-torture/compile/pr40964.c
      - copied unchanged from r150811, trunk/gcc/testsuite/gcc.c-torture/compile/pr40964.c
    branches/gcc-4_4-branch/gcc/testsuite/gcc.c-torture/compile/pr41006-1.c
      - copied unchanged from r150811, trunk/gcc/testsuite/gcc.c-torture/compile/pr41006-1.c
    branches/gcc-4_4-branch/gcc/testsuite/gcc.c-torture/compile/pr41006-2.c
      - copied unchanged from r150811, trunk/gcc/testsuite/gcc.c-torture/compile/pr41006-2.c
    branches/gcc-4_4-branch/gcc/testsuite/gcc.dg/tree-ssa/ssa-ccp-27.c
      - copied unchanged from r150811, trunk/gcc/testsuite/gcc.dg/tree-ssa/ssa-ccp-27.c
    branches/gcc-4_4-branch/gcc/testsuite/gcc.dg/vect/O1-pr41008.c
      - copied unchanged from r150811, trunk/gcc/testsuite/gcc.dg/vect/O1-pr41008.c
    branches/gcc-4_4-branch/gcc/testsuite/gcc.target/i386/pr40934.c
      - copied unchanged from r150811, trunk/gcc/testsuite/gcc.target/i386/pr40934.c
    branches/gcc-4_4-branch/gcc/testsuite/gcc.target/i386/pr40957.c
      - copied unchanged from r150811, trunk/gcc/testsuite/gcc.target/i386/pr40957.c
    branches/gcc-4_4-branch/gcc/testsuite/gfortran.dg/intrinsic_4.f90
      - copied unchanged from r150811, trunk/gcc/testsuite/gfortran.dg/intrinsic_4.f90
    branches/gcc-4_4-branch/gcc/testsuite/gfortran.dg/pr41011.f
      - copied unchanged from r150811, trunk/gcc/testsuite/gfortran.dg/pr41011.f
    branches/gcc-4_4-branch/gcc/testsuite/gfortran.dg/structure_constructor_10.f90
      - copied unchanged from r150811, trunk/gcc/testsuite/gfortran.dg/structure_constructor_10.f90
Modified:
    branches/gcc-4_4-branch/gcc/testsuite/ChangeLog

Comment 5 H.J. Lu 2009-08-18 16:46:25 UTC
This isn't a 4.5 regression since there is no -fwhole-file in gcc 4.4.